# mint-ID2.0

backend/: .gitignore  Cargo.toml  README.md
backend/config/: reveal_attributes.json  statement.json  statement_age.json
backend/src/: handlers.rs  main.rs  types.rs
cis2-multi/: Cargo.toml
cis2-multi/src/: lib.rs
mint-ui/: .gitignore  package-lock.json  package.json
mint-ui/src/: App.tsx  Constants.ts
mint-ui/src/components/: Init.tsx  Mint.tsx  VerifierGetSignature.tsx
mint-ui/src/models/: CIS2ContractClient.ts  CIS2ContractHelpers.ts
