[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.11"
env_logger = "0.10.0"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4.19"
thiserror = "1"
rand = "0.8"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
ed25519-dalek = "1.0.1"
hex = "0.4.3"
# concordium-rust-sdk = "2.4.0"


[dependencies.concordium-rust-sdk]
path = "../deps/concordium-rust-sdk/"
